--- a/src/pages/startPage/App.css
+++ b/src/pages/startPage/App.css
@@ -6,3 +6,8 @@
   grid-template-rows: 2fr 8fr;
   grid-template-columns: 2fr 8fr;
 }
+
+.app-wrapper-content {
+  grid-area: c;
+  background-color: chocolate;
+}
