--- a/src/components/BlockNavigation/BlockNavigation.module.css
+++ b/src/components/BlockNavigation/BlockNavigation.module.css
@@ -1,4 +1,14 @@
 .nav {
+  padding: 20px;
   grid-area: n;
   background-color: burlywood;
+}
+
+a {
+  text-decoration: none;
+  color: white;
+}
+
+.active {
+  font-size: large;
 }
