lesson №27 replaced the component attribute with a render

--- a/src/components/BlockContent/BlockPosts/Post/Post.module.css
+++ b/src/components/BlockContent/BlockPosts/Post/Post.module.css
@@ -1,4 +1,10 @@
 .item img {
     width: 100px;
     border-radius: 50px;
+    padding: 10px;
+    vertical-align: middle;
+}
+
+.message {
+    padding: 10px;
 }
