lesson№73.3 finish user.jsx fix maw-height block content

--- a/src/components/BlockContent/BlockProfileInfo/BlockProfileInfo.module.css
+++ b/src/components/BlockContent/BlockProfileInfo/BlockProfileInfo.module.css
@@ -11,3 +11,13 @@
     padding-top: 20px;
     padding-bottom: 20px;
 }
+
+.title {
+    display: inline-block;
+    vertical-align: middle;
+    margin-right: 10px;
+}
+
+.discription {
+    margin-bottom: 10px;
+}
