--- a/src/components/BlockUser/BlockUser.module.css
+++ b/src/components/BlockUser/BlockUser.module.css
@@ -3,6 +3,31 @@
     position: fixed;
     top: 10px;
     right: 10px;
-    width: 100px;
+    width: 200px;
     border-radius: 5px;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.wrapper:hover {
+    transition: background-color 1s;
+    background-color: rgba(0, 0, 0, 0.7);
+}
+
+.wrapper img {
+    height: 50px;
+    width: auto;
+    border-radius: 30px;
+    margin: 5px 20px 5px 20px;
+    border: 1px solid white;
+}
+
+.login {
+    display: inline-block;
+    padding: 0 20px 0 20px;
+    color: white;
+    font-weight: bold;
+}
+
+img, div {
+    vertical-align: middle;
 }
