--- a/src/pages/startPage/App.css
+++ b/src/pages/startPage/App.css
@@ -2,12 +2,14 @@
   margin: 0 auto;
   display: grid;
   width: auto;
-  grid-template-areas: "h h" "n c";
+  grid-template-areas: "h h""n c";
   grid-template-rows: 2fr 8fr;
   grid-template-columns: 2fr 8fr;
+  max-height: 1840px;
 }
 
 .app-wrapper-content {
   grid-area: c;
   background-color: chocolate;
+  overflow: auto;
 }
