--- a/src/components/common/formsControls/formsControl.module.css
+++ b/src/components/common/formsControls/formsControl.module.css
@@ -6,3 +6,9 @@
 .formControl.error span {
     color: red;
 }
+
+.formControl input {
+    width: 271px;
+    height: 31px;
+    display: inline-block;
+}
