--- a/src/components/HallWay/HallWay.module.css
+++ b/src/components/HallWay/HallWay.module.css
@@ -1,11 +1,206 @@
+@font-face {
+    font-family: 'Roboto';
+    src: url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
+}
+
 .wrapper {
-    height: 100%;
-    width: 100%;
+    width: 100vw;
+    height: 100vh;
     background-color: #FFCE00;
+    font-family: 'Roboto', sans-serif;
 }
 
 .content {
     max-width: 1440px;
     max-height: 1024px;
+    padding-top: 102px;
     margin: 0 auto;
+}
+
+.blockLogo {
+    width: 1440px;
+    height: 281px;
+}
+
+.logo {
+    width: 859px;
+    height: 265px;
+    margin: 0 auto;
+    padding-left: 34px;
+    padding-top: 16px;
+}
+
+.image {
+    height: 146px;
+    width: 146px;
+    margin-left: 20px;
+    margin-top: 18px;
+    display: inline-block;
+}
+
+.logo img {
+    height: 146px;
+    width: 146px;
+    margin-bottom: -20px;
+}
+
+.title {
+    width: 632px;
+    height: 185px;
+    display: inline-block;
+}
+
+.rectangleTall {
+    height: 74px;
+    width: 74px;
+    background-color: #A68600;
+    color: white;
+    display: inline-block;
+    text-align: center;
+    /* Один из способов выровнять текст по вертикали по центру это присвоить line-height: значение высоты блока в котором находится текст */
+    line-height: 74px;
+    margin: 18px 4px 12px 24px;
+    font-size: 170%;
+    font-weight: bolder;
+}
+
+.rectangleSmall {
+    height: 50px;
+    width: 50px;
+    background-color: #A68600;
+    color: white;
+    display: inline-block;
+    text-align: center;
+    /* Один из способов выровнять текст по вертикали по центру это присвоить line-height: значение высоты блока в котором находится текст */
+    line-height: 50px;
+    margin: 12px 15px 20px 24px;
+    font-size: 100%;
+    font-weight: bolder;
+}
+
+.login {
+    width: 1440px;
+    height: 331px;
+}
+
+.inputBlock {}
+
+.titleImput {
+    margin-bottom: 13px;
+}
+
+.titleImput div {
+    display: inline-block;
+}
+
+.text {
+    width: 80px;
+    margin-left: 20px;
+}
+
+.loginForm {
+    height: 276px;
+    width: 407px;
+    margin: 0 auto;
+    border-radius: 10px;
+    border: 2px solid #A68107;
+    background-color: #FFD651;
+}
+
+.loginForm h1 {
+    font-weight: bolder;
+    font-size: 150%;
+    margin: 21px 0 8px 20px;
+}
+
+.loginForm p {
+    font-size: 100%;
+    font-weight: normal;
+    margin: 0 0 28px 20px;
+}
+
+.remember div {
+    display: inline-block;
+    width: 200px;
+}
+
+.remember :nth-child(1) {
+    text-align: right;
+    margin-right: 7px;
+    width: 115px;
+}
+
+.remember :nth-child(2) {
+    text-align: left;
+    font-size: 75%;
+}
+
+.remember input:nth-of-type(1) {
+    height: 10px;
+    width: 10px;
+}
+
+.button {
+    margin-top: 12px;
+    text-align: center;
+
+}
+
+.button button {
+    width: 132px;
+    height: 28px;
+    border-radius: 30px;
+    background-color: #A68107;
+    color: white;
+    font-size: 112%;
+    outline: none;
+    border: none;
+    cursor: pointer;
+}
+
+.button button:hover {
+    background-color: #7e6504;
+}
+
+
+
+.else {
+    margin: 18px auto 0 auto;
+    width: 408px;
+}
+
+.questions {
+    width: 204px;
+    display: inline-block;
+    text-align: right;
+    font-size: 75%;
+}
+
+.singUp {
+    width: 204px;
+    display: inline-block;
+    font-size: 75%;
+}
+
+.singUp div {
+    margin-left: 20px;
+    text-decoration: underline;
+}
+
+.footer {
+    position: absolute;
+    width: 1440px;
+    height: 84px;
+    bottom: 0;
+}
+
+.signature {
+    background-color: #BFA430;
+    color: white;
+    width: 822px;
+    height: 40px;
+    margin: 44px auto 0 auto;
+    text-align: center;
+    line-height: 40px;
+    border-radius: 20px 20px 0 0
 }
