--- a/src/components/common/formsControls/formsControl.module.css
+++ b/src/components/common/formsControls/formsControl.module.css
@@ -1,6 +1,7 @@
 .formControl.error input,
 .formControl.error textarea {
-    border: red solid 2px;
+    background-color: #D81818;
+    opacity: 61%;
 }
 
 .formControl.error span {
