--- a/src/components/common/formsControls/formsControl.module.css
+++ b/src/components/common/formsControls/formsControl.module.css
@@ -14,3 +14,17 @@
     height: 31px;
     display: inline-block;
 }
+
+.errorMessage {
+    position: absolute;
+    border: 2px solid black;
+    margin-left: 59px;
+    height: 31px;
+    width: 271px;
+    background-color: #D81818;
+    opacity: 61%;
+    border-radius: 10px;
+    line-height: 31px;
+    padding-left: 5px;
+    color: white;
+}
