--- a/src/components/HallWay/HallWay.module.css
+++ b/src/components/HallWay/HallWay.module.css
@@ -15,7 +15,7 @@
     max-height: 1024px;
     padding-top: 102px;
     margin: 0 auto;
-    background-color: yellowgreen;
+    background-color: #FFCE00;
 }
 
 .blockLogo {
