--- a/src/components/common/formsControls/formsControl.module.css
+++ b/src/components/common/formsControls/formsControl.module.css
@@ -5,26 +5,35 @@
     opacity: 61%;
 }
 
-.formControl.error span {
-    color: red;
+.formControl.error div {
+    font-size: 75%;
 }
 
 .formControl input {
     width: 271px;
     height: 31px;
     display: inline-block;
+    border-radius: 10px;
 }
 
 .errorMessage {
     position: absolute;
     border: 2px solid black;
     margin-left: 59px;
-    height: 31px;
-    width: 271px;
+    height: auto;
+    width: auto;
+    min-height: 31px;
     background-color: #D81818;
     opacity: 61%;
     border-radius: 10px;
     line-height: 31px;
     padding-left: 5px;
+    padding-right: 5px;
     color: white;
+}
+
+@media(max-width:1340px) {
+    .formControl.error div {
+        line-height: 12px;
+    }
 }
