--- a/src/components/HallWay/HallWay.module.css
+++ b/src/components/HallWay/HallWay.module.css
@@ -84,19 +84,6 @@
     height: 331px;
 }
 
-.titleImput {
-    margin-bottom: 13px;
-}
-
-.titleImput div {
-    display: inline-block;
-}
-
-.text {
-    width: 80px;
-    margin-left: 20px;
-}
-
 .loginForm {
     height: 276px;
     width: 407px;
@@ -117,51 +104,6 @@
     font-weight: normal;
     margin: 0 0 28px 20px;
 }
-
-.remember div {
-    display: inline-block;
-    width: 200px;
-}
-
-.remember :nth-child(1) {
-    text-align: right;
-    margin-right: 7px;
-    width: 115px;
-}
-
-.remember :nth-child(2) {
-    text-align: left;
-    font-size: 75%;
-}
-
-.remember input:nth-of-type(1) {
-    height: 10px;
-    width: 10px;
-}
-
-.button {
-    margin-top: 12px;
-    text-align: center;
-
-}
-
-.button button {
-    width: 132px;
-    height: 28px;
-    border-radius: 30px;
-    background-color: #A68107;
-    color: white;
-    font-size: 112%;
-    outline: none;
-    border: none;
-    cursor: pointer;
-}
-
-.button button:hover {
-    background-color: #7e6504;
-}
-
-
 
 .else {
     margin: 18px auto 0 auto;
@@ -202,4 +144,17 @@
     text-align: center;
     line-height: 40px;
     border-radius: 20px 20px 0 0
+}
+
+.error {
+    border: solid 1px rgba(216, 24, 24, 0.61);
+    color: white;
+    background-color: rgba(216, 24, 24, 0.61);
+    width: 407px;
+    text-align: center;
+    margin: 10px auto;
+}
+
+.error h4 {
+    margin: 5px;
 }
