--- a/src/components/BlockNavigation/BlockNavigation.module.css
+++ b/src/components/BlockNavigation/BlockNavigation.module.css
@@ -2,21 +2,14 @@
   padding: 20px;
   grid-area: n;
   background-color: burlywood;
+  text-align: center;
 }
 
 .item a {
   text-decoration: none;
-  border: 1px solid black;
   width: 150px;
   margin-bottom: 2px;
   display: block;
   padding: 5px 0 5px 5px;
-  background-color: khaki;
   color: black;
-  border-radius: 5px;
-}
-
-a.active {
-  font-size: large;
-  color: red;
 }
